--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </div>
 <div id="szbdkym" class="szbdkym">
 <h1 id="szbgb" class="szbgb" onclick="szbgb();" style="margin-left:10px;">‹</h1>
-<div id="xtbba" class="xtbba" onclick="if(xtbb == 1){setTimeout(function(){alert('发现新版本!\n版本号: 1.0.2.0.DEV\n更新内容:\n修复 快速打开关闭设置时选项未关闭\n新增 触控优化\n注意 该版本为内测版本，如遇问题请联系开发者');xtbb = 2;xtbbgx();},500);}else{alert('已经是最新版本');}"><br><h1 id="xtbbb" class="xtbbb">UPLCC<span style="color:#00baff;">OS</span></h1><p style="color:gray;margin-left:20px;" id="xtbbh">1.0.1.0.HTML</p></div>
+<div id="xtbba" class="xtbba" onclick="if(xtbb == 1){if(xtbbbutcx == 0){setTimeout(function(){alert('发现新版本!\n版本号: 1.0.2.0.DEV\n更新内容:\n修复 快速打开关闭设置时选项未关闭\n新增 触控优化\n注意 该版本为内测版本，如遇问题请联系开发者');ljgx.style.display='block';},500);xtbbbutcx = 1;}}else{alert('已经是最新版本');}"><br><h1 id="xtbbb" class="xtbbb">UPLCC<span style="color:#00baff;">OS</span></h1><p style="color:gray;margin-left:20px;" id="xtbbh">1.0.1.0.HTML</p><div id="ljgx" class="ljgx"><center><p style="color:white;" onclick="xtgxbut();" id="ljgxh">立即更新</p></center></div></div>
 <div id="xtbbb" class="xtbbb"><h3>HTML5</h3><sup>HTML版本</sup><br><input type="text" id="inputsba" class="inputsba" placeholder="请输入"/><br><sub>设备型号</sub><br><input type="text" id="inputsba" class="inputsba" placeholder="请输入"/><br><sub>处理器</sub></div>
 </div>
   </body>
@@ -29,6 +29,34 @@ body{
 background-color:black;
 margin:0;
 padding:0;
+}
+.ljgx{
+background-color:#93fffa;
+height:20px;
+width:100px;
+border-radius:7px;
+margin-left:15px;
+display:none;
+}
+@keyframes xtgxdh{
+0%{
+height:20px;
+width:100px;
+border-radius:7px;
+margin-left:15px;
+}
+10%{
+height:10px;
+width:30px;
+border-radius:20px;
+margin-left:2%;
+}
+100%{
+height:10px;
+width:95%;
+border-radius:20px;
+margin-left:2%;
+}
 }
 .xta{
 width:0%;
@@ -195,6 +223,7 @@ ckyh = 0;
 rjasz = 0;
 xhtgba = 0;
 xtbb = 1;
+xtbbbutcx = 0;
 function dk(){
 zw.style.backgroundColor="white";
 setTimeout(function (){
@@ -290,7 +319,20 @@ xhtbk.style.height="5px";
 }
 }
 function xtbbgx(){
+    setTimeout(function (){
 document.getElementById("xtbbh").innerHTML="1.0.2.0.DEV";
+xtbb = 2;
+},200);
+}
+function xtgxbut(){
+ljgxh.style.display="none";
+ljgx.style.animationName="xtgxdh";
+ljgx.style.animationDuration="7s";
+setTimeout(function (){
+ljgx.style.display="none";
+alert("更新成功!");
+xtbbgx();
+},7000);
 }
 </script>
 </html>
